crates/wolf_lex/tests/snapshots/diagnostics__e0107.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: "E0107",
        severity: Error,
        span: Span {
            file: FileId(
                0,
            ),
            lo: 4,
            hi: 5,
        },
        message: "stray character `$`",
        notes: [],
    },
]
