crates/wolf_lex/tests/snapshots/diagnostics__e0109_generalized.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0109,
        severity: Error,
        message: "this generalized literal never closes",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 8,
                hi: 14,
            },
            label: "it opens here and must close with `\"` before the line ends",
        },
        secondary: [],
        notes: [],
        suggestions: [
            Suggestion {
                message: "close the literal before the line ends",
                edits: [
                    (
                        Span {
                            file: FileId(
                                0,
                            ),
                            lo: 14,
                            hi: 14,
                        },
                        "\"",
                    ),
                ],
                applicability: Maybe,
            },
        ],
    },
]
