crates/wolf_lex/tests/snapshots/diagnostics__e0109_raw.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: "E0109",
        severity: Error,
        span: Span {
            file: FileId(
                0,
            ),
            lo: 8,
            hi: 15,
        },
        message: "unterminated raw string literal; expected the closing fence",
        notes: [],
    },
]
