crates/wolf_lex/tests/snapshots/diagnostics__e0110_empty.snap
---
source: crates/wolf_lex/tests/diagnostics.rs
expression: "format!(\"{:#?}\", lexed.diagnostics)"
---
[
    Diagnostic {
        code: E0110,
        severity: Error,
        message: "a `char` literal cannot be empty",
        primary: LabeledSpan {
            span: Span {
                file: FileId(
                    0,
                ),
                lo: 8,
                hi: 10,
            },
            label: "nothing between the quotes",
        },
        secondary: [],
        notes: [
            "a `char` literal is one Unicode scalar value in single quotes: `'a'`, `'é'`, `'\\n'`, `'\\''`, `'\\u{1F43A}'`. For text, use a string literal `\"…\"`.",
        ],
        suggestions: [],
    },
]
